# forests

./: .gitignore  EARTHACCESS_NOTES.md  README.md  build_dist_alert_inspector.py  dist_alert_inspector.html  extract_alphaearth_embeddings.py  extract_dist_alerts.py  extract_opera_dist_alerts.py  pyproject.toml
app/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/data-prep/: prepare_mock_data.py
app/public/data/: alerts.parquet  area_cover_annual.parquet  area_cover_monthly.parquet  forest_polygons.geojson  meta.json
app/src/: charts.js  duck.js  main.js  map.js  style.css
data/processed/: kalklindeskog_union.dbf  kalklindeskog_union.parquet  kalklindeskog_union.shp  kalklindeskog_union.shx  olivinskog_union.dbf  olivinskog_union.parquet  olivinskog_union.shp  olivinskog_union.shx
